plugins {
    id 'java'
    id 'checkstyle'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'at.ac.tuwien.mogda'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // region SPRING
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    // Geo/spatial support
    implementation 'org.locationtech.jts:jts-core:1.20.0'
    implementation 'org.n52.jackson:jackson-datatype-jts:1.2.10'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // endregion
    // region MAPSTRUCT
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    // endregion
    // region LOMBOK
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    // endregion
    // region JUNIT
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // endregion
    // region LOGBGING
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    //endregion

    testImplementation 'io.projectreactor:reactor-test'

    //java topology (jts)
    implementation("org.locationtech.jts:jts-core:1.20.0")

    //csv stuff
    implementation("org.apache.commons:commons-csv:1.14.1")

    configurations.configureEach {
        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
        exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
    }
}

checkstyle {
    toolVersion = '12.1.1'
    configFile = file('config/checkstyle/checkstyle.xml')
    configProperties = [
            'checkstyle.suppressions.file': file('config/checkstyle/suppressions.xml').absolutePath
    ]
}

tasks.named('checkstyleMain', Checkstyle) {
    source 'src/main/java'
    include '**/*.java'
    classpath = files()
}

tasks.named('checkstyleTest', Checkstyle) {
    source 'src/test/java'
    include '**/*.java'
    classpath = files()
}

tasks.named('test') {
    useJUnitPlatform()
}
